<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayLight"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/startBlue"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/details_userImage"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:contentDescription="@string/user_avatar"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_margin="4dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reputation"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/details_userReputation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/_125"
                            android:textColor="@color/startBlue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/details_userScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/_1205"
                            android:textColor="@color/startBlue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accept_rate"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/details_userAcceptrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/startBlue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="2dp"
                    android:paddingTop="8dp"
                    android:text="@string/wiliam_gmail_com"
                    android:lines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_userEditDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:text="@string/yyyy_mm_dd_hh_mm_ss"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creation_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_userCreationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:text="@string/yyyy_mm_dd_hh_mm_ss"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_activity_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userLastActivityDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="2dp"
                    android:text="@string/yyyy_mm_dd_hh_mm_ss"
                    android:textColor="@color/darkColor"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>